# dirt-samples

./: .gitignore  README.md  prebake.strudel  prepare_samples.py  strudel.json
basshit/: Audio 2 [2024-09-25 141456].aif  Audio 2 [2024-09-25 141458].aif  Audio 2 [2024-09-25 141500].aif  Audio 2 [2024-09-25 141518].aif  Audio [2024-09-25 141523].aif  Audio [2024-09-25 141524].aif  Audio [2024-09-25 141527].aif  Audio [2024-09-25 141529].aif  Audio [2024-09-25 141530].aif
bassu/: DJU_Am_PITCHED_COLD.wav.asd  DJU_C_ALPS.wav.asd  DJU_C_DIE.wav.asd  DJU_C_DX.wav.asd  DJU_C_DXFM_BASS.wav.asd  DJU_C_ELEKTRIK.wav.asd  DJU_C_FM_GRIME.wav.asd  DJU_C_MERRY_GO.wav.asd  DJU_C_RUMBLE.wav.asd  DJU_C_SINUS.wav.asd  DJU_F_PITCHED_ORGAN_BASS.wav.asd  DJU_F_PITCHED_SLUDGE.wav.asd
basswt/: Audio [2024-09-24 214841].aif  Audio [2024-09-24 222248].aif  Audio [2024-09-24 222249].aif  Audio [2024-09-24 222251].aif  Audio [2024-09-24 222253].aif  Audio [2024-09-24 222256].aif  Audio [2024-09-24 222257].aif  Audio [2024-09-24 222259].aif  Audio [2024-09-24 222303].aif  (+37 more)
sample-corpus-tools/: .gitignore  README.md  RUNBOOK.md  pyproject.toml
sample-corpus-tools/config/: config.example.yaml  pack.yaml
sample-corpus-tools/data/features/: samples.csv  samples.parquet
sample-corpus-tools/data/knn/: knn.joblib  rows.csv  rows.parquet  samples.csv  scaler.joblib
sample-corpus-tools/docs/: troubleshooting.md
sample-corpus-tools/scripts/: runall.sh
sample-corpus-tools/src/sample_corpus_tools/: __init__.py  cli.py  config.py  extract.py  knn.py  level_features.py  pack.py
(+318 files in other folders)
